# phonopasswd

./: .travis.yml  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: tests.yaml
phonopasswd/: __init__.py  languages.py
src/phonopasswd/: __init__.py  languages.py
tests/: test_main.py
