[project]
name = "phonopasswd"
version = "2.0.0"
authors = [
    { name="Sergey Andrianov", email="info@andrian.ninja" },
]
description = "Phonetic password generator"
keywords = ["password", "security", "tools"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/andr1an/phonopasswd"
"Bug Tracker" = "https://github.com/andr1an/phonopasswd/issues"

[project.scripts]
phonopasswd = "phonopasswd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.black]
line-length = 80
